Remove part of plastic heroes description

--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -114,10 +114,10 @@
 							<h3>About The Project</h3>
 							<p> Plastic Heroes is an in-house project that we're developing at Fun Punch Games, aimed to launch
 								 for mobile and Nintendo Switch.
-								<br>
+								<!-- <br>
 								This is a very ambitious project but also one of our favorites. It is the first time
 								we're developing a multiplayer FPS game and we believe this will be a major successful IP to add
-								to our collection.
+								to our collection. -->
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Gameplay Programming
