--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<span class="image overlayed"><img src="images/me/me.jpg" alt="" /></span>
+				<span class="image overlayed"><img src="images/me/me5_trimmed.JPG" alt="" /></span>
 				<header class="main">
 					<h2>Diogo Martins</h2>
 					<p>Unity Developer<br>Gameplay Programmer</p>
-					<a href="https://drive.google.com/file/d/1pFxBEYnO9hSdU497zqQS2ztgYVE8w04E/view?usp=sharing"
+					<a href="https://drive.google.com/file/d/1eUsTNKNWO5U3lKcKeNwVsgXWPO3iHM4v/view?usp=sharing"
 						target="_blank" class="button cv fat small">CV</a>
 					<ul class="icons">
 						<li><a href="https://twitter.com/diotins" target="_blank"
@@ -79,7 +79,7 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Who am I?</h2>
-								<p>From Lisbon, Portugal, I'm a 22 year-old man passionate about game dev
+								<p>From Lisbon, Portugal, I'm a 23 year-old man passionate about game dev
 									and the entertainment industry</p>
 							</header>
 						</div>
@@ -93,7 +93,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>Currently working at <a href="https://funpunchgames.com/" target="_blank">Fun Punch Games</a>, 
-								where I've been for over a year, I've had the chance to work on genuinely thrilling projects 
+								where I've been for over 2 years, I've had the chance to work on genuinely thrilling projects 
 								and tackle great new challenges. From a multiplayer FPS to an NFT endless runner 
 								and an RPG top-down strategy game, there have been plenty of really fun games!
 							</p>
@@ -171,12 +171,25 @@
 					<h2>Main Projects</h2>
 				</header>
 				<!-- Gallery -->
-				<div class="gallery style3 medium onscroll-fade-in">
+				<div class="gallery style3 small onscroll-fade-in">
 					<article>
-						<a href="plastic-heroes.html" class="image2"><img src="images/projects/plasticheroes/Header.png" alt="" /></a>
+						<!--
+							<a href="plastic-heroes.html" class="image2"><img src="images/projects/plasticheroes/Header.png" alt="" /></a>
+						-->
+						<a href="https://funpunchgames.com/plasticheroes/" target="_blank" class="image2"><img src="images/projects/plasticheroes/Header 1.png" alt="" /></a>
 						<div class="caption">
 							<h3>Plastic Heroes</h3>
 							<p class="subtitle">Co-op Survival FPS</p>
+							<p class="details"> Programmer | Game Designer </p>
+						</div>
+						<div>
+						</div>
+					</article>
+					<article>
+						<a href="https://www.planetfree.com/" target="_blank" class="image2"><img src="images/projects/planetfree/Header.png" alt="" /></a>
+						<div class="caption">
+							<h3>Planet Free</h3>
+							<p class="subtitle">Augmented Reality Location based Game</p>
 							<p class="details"> Programmer | Game Designer </p>
 						</div>
 						<div>
@@ -203,12 +216,12 @@
 						</div>
 					</article>
 					<article>
-						<a href="happy-new-rocket.html" class="image2"><img
-								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
+						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
+								alt="" /></a>
 						<div class="caption">
-							<h3>Happy New Rocket</h3>
-							<p class="subtitle">Multiplayer Action Battle</p>
-							<p class="details"> Programmer | Game Designer</p>
+							<h3>Illuminants</h3>
+							<p class="subtitle">Top-Down Puzzle Game</p>
+							<p class="details">Programmer | Game Designer | 2D Artist</p>
 						</div>
 					</article>
 					<article>
@@ -221,21 +234,21 @@
 						</div>
 					</article>
 					<article>
+						<a href="happy-new-rocket.html" class="image2"><img
+								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
+						<div class="caption">
+							<h3>Happy New Rocket</h3>
+							<p class="subtitle">Multiplayer Action Battle</p>
+							<p class="details"> Programmer | Game Designer</p>
+						</div>
+					</article>
+					<article>
 						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Holy Hell</h3>
 							<p class="subtitle">Top-Down Action-Adventure</p>
 							<p class="details">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
-						</div>
-					</article>
-					<article>
-						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
-								alt="" /></a>
-						<div class="caption">
-							<h3>Illuminants</h3>
-							<p class="subtitle">Top-Down Puzzle Game</p>
-							<p class="details">Programmer | Game Designer | 2D Artist</p>
 						</div>
 					</article>
 					<article>
