Small fix in Game Design description

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							<span class="icon solid alt major fa-gamepad"></span>
 							<h3>Game Design</h3>
 							<p>One of my most consistent roles in game development has been game design, which I
-								had in all of my previous projects. Other extensions of this area such as World and
+								had in most of my previous projects. Other extensions of this area such as World and
 								Level Design have also been a part of my work.
 							</p>
 						</section>
