Update fav games list

--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
 						<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
 						Mirror's Edge | Subnautica |
 						Outlast | Amnesia: The Dark Descent
-						<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
-						Legends.
+						<br>Also a casual fan of competitive games including Call of Duty, Rocket League, Apex
+						Legends, and League of Legends.
+						<!--<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
+						Legends.-->
 					</p>
 				</div>
 			</div>
