--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 						<div class="col-4 col-12-medium">
 							<p>Currently working at <a href="https://funpunchgames.com/" target="_blank">Fun Punch Games</a>, 
 								where I've been for over 2 years, I've had the chance to work on genuinely thrilling projects 
-								and tackle great new challenges. From a multiplayer FPS to an NFT endless runner 
-								and an RPG top-down strategy game, there have been plenty of really fun games!
+								and tackle great new challenges. From a multiplayer FPS to a geo-location AR game 
+								and a top-down strategy RPG, there have been plenty of really fun games!
 							</p>
 						</div>
 						
