--- a/illuminants.html
+++ b/illuminants.html
@@ -121,7 +121,7 @@
 							<a href="#" class="image fit"><img src="images/projects/illuminants/banner.png"
 									alt="" /></a>
 							<h3>About The Project</h3>
-							<p>Illuminants was the first game I ever developed in Unity. My group and I worked on it for about 4 months alongside ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the idea itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years.
+							<p>Illuminants was the first game I ever developed in Unity. My team and I worked on it for about 4 months alongside ATMU (another project of ours) and we got lots of praise from colleagues and professors just by the concept itself. We were prized the Best Videogame award by our University, competing against projects from all of our course's years.
 								<br><br>We displayed the game in multiple events in Portugal and it was really well embraced by the community.
 								<br><br>Currently, we are re-developing Illuminants from scratch and intend to release it to mobile, with no determined schedule. </p>
 							<h3>My Role In The Project</h3>
