--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>Currently working at <a href="https://funpunchgames.com/" target="_blank">Fun Punch Games</a>, 
-								where I've been for over 2 years, I've had the chance to work on genuinely thrilling projects 
+								where I've been for almost 3 years, I've had the chance to work on genuinely thrilling projects 
 								and tackle great new challenges. From a multiplayer FPS to a geo-location AR game 
 								and a top-down strategy RPG, there have been plenty of really fun games!
 							</p>
@@ -112,7 +112,7 @@
 						<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
 						Mirror's Edge | Subnautica |
 						Outlast | Amnesia: The Dark Descent
-						<br>Also a casual fan of competitive games including Call of Duty, Rocket League, Apex
+						<br>Also a casual fan of competitive games including Call of Duty, Counter Strike, Rocket League, Apex
 						Legends, and League of Legends.
 						<!--<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
 						Legends.-->
@@ -140,9 +140,9 @@
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-gamepad"></span>
 							<h3>Game Design</h3>
-							<p>One of my most consistent roles in game development has been game design, which I
-								had in most of my previous projects. Other extensions of this area such as World and
-								Level Design have also been a part of my work.
+							<p>One of my most consistent roles in game development has been game design, which I have
+								been doing in most of my previous projects. Other extensions of this area such as World
+								and Level Design have also been a part of my work.
 							</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
@@ -182,7 +182,7 @@
 						<div class="caption">
 							<h3>Plastic Heroes</h3>
 							<p class="subtitle">Co-op Survival FPS</p>
-							<p class="details"> Programmer | Game Designer </p>
+							<p class="details"> Gameplay Programmer  | Game Designer </p>
 						</div>
 						<div>
 						</div>
