Major update to porfolio

--- a/face-masher.html
+++ b/face-masher.html
@@ -82,12 +82,12 @@
 									(eyes, nose, mouth, etc) are falling down.
 								</p>
 								<!-- DOWNLOAD PAGE -->
-								<footer>
+								<!-- <footer>
 									<ul class="actions">
 										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.facebuilder"
 												target="_blank" class="button">Download Link</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 							<hr />
 
