--- a/bomb-it.html
+++ b/bomb-it.html
@@ -82,12 +82,12 @@
 									ricocheting bombs and projectiles.
 								</p>
 								<!-- DOWNLOAD PAGE -->
-								<footer>
+								<!-- <footer>
 									<ul class="actions">
 										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.bombit&hl=en&gl=US" 
 											target="_blank" class="button">Download Link</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 							<hr />
 
