Finish planet free page

--- a/bomb-it.html
+++ b/bomb-it.html
@@ -130,12 +130,15 @@
 								<li>Game Design
 									<p> Alongside my team, I was part of all the game design process behind this game.</p>
 								</li>
+								<li>Level Design
+									<p> I was responsible for designing, implementing and fine-tuning the levels.</p>
+								</li>
 								<li>3D Art
 									<p>Using external tools I modelled 3d models that were required for the 
 										prototype and final iteration of the project.</p>
 								</li>
 								<li>VFX
-									<p>I was responsible for the visual effects and feedback that juice up the game feel.</p>
+									<p>I was responsible for the visual effects and feedback that spruce up the game feel.</p>
 								</li>
 							</ul>
 							<!-- Gallery  -->
