--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					<p class="subtitle">An augmented reality location-based game.</p>
 				</header>
 				<ul class="actions">
-					<li><a href="https://www.planetfree.com/" target="_blank" class="button">See more</a></li>
+					<li><a href="planet-free.html" class="button">See more</a></li>
 				</ul>
 			</div>
 			<a href="#other" class="goto-next scrolly">Next</a>
