--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -122,7 +122,8 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/plasticheroes/HUB.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p> Plastic Heroes is an in-house IP that we're developing at Fun Punch Games, aimed to initially
+							<p> Plastic Heroes is an in-house IP that we're developing at <a href="https://funpunchgames.com/"
+								target="_blank">Fun Punch Games</a>, aimed to initially
 								launch on Steam and Nintendo Switch.
 								The project idea was born from a drawing that we immediately fell in love with made by our Concept
 								Artist, that we decided to go for during a one week game jam. The result was enough for us to decide
