Update all pages' footers

--- a/atmu.html
+++ b/atmu.html
@@ -146,12 +146,12 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands style2 fa-gitlab"><span class="label">GitLab</span></a></li>
-				<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="mailto:diogofm99@gmail.com" target="_blank" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://www.linkedin.com/in/diogo-martins99/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<!-- <li><a href="https://www.facebook.com/diogo.fmartins99" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+				<li><a href="https://github.com/diogo-martins99" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="https://twitter.com/diotins" target="_blank" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.instagram.com/therealdiotins/" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
 			<br>
 			<ul class="copyright">
