Update plastic-heroes description

--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -126,8 +126,10 @@
 								target="_blank">Fun Punch Games</a>, aimed to initially
 								launch on Steam and Nintendo Switch.
 								The project idea was born from a drawing that we immediately fell in love with made by our Concept
-								Artist, that we decided to go for during a one week game jam. The result was enough for us to decide
-								to move further with the project.
+								Artist. We liked it so much that we decided to tackle the idea during a one week game jam. 
+								The result was enough for us to decide to move further with the project.
+								We are currently in the process of closing a deal with a publisher, having solid offers on the 
+								table being discussed at the moment.
 								<!-- <br>
 								This is a very ambitious project but also one of our favorites. It is the first time
 								we're developing a multiplayer FPS game and we believe this will be a major successful IP to add
