Add shaders role in bomb it and face masher

--- a/bomb-it.html
+++ b/bomb-it.html
@@ -137,6 +137,9 @@
 									<p>Using external tools I modelled 3d models that were required for the 
 										prototype and final iteration of the project.</p>
 								</li>
+								<li>Shaders
+									<p>I implemented custom shaders for gameplay visuals (e.g. the gradient skybox).</p>
+								</li>
 								<li>VFX
 									<p>I was responsible for the visual effects and feedback that spruce up the game feel.</p>
 								</li>
