--- a/face-masher.html
+++ b/face-masher.html
@@ -136,6 +136,9 @@
 									<p> Alongside my team, I was part of all the game design process behind this game.
 									</p>
 								</li>
+								<li>Shaders
+									<p>I implemented custom shaders for gameplay visuals (e.g. the background skybox).</p>
+								</li>
 							</ul>
 							<!-- Gallery  -->
 							<h3>Gallery</h3>
