Force projects to open in new tab

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 					<p class="subtitle">A fast-paced roguelite co-op FPS in a kid's imaginative world.</p>
 				</header>
 				<ul class="actions">
-					<li><a href="plastic-heroes.html" class="button">See more</a></li>
+					<li><a href="plastic-heroes.html" target="_blank" class="button">See more</a></li>
 				</ul>
 			</div>
 			<a href="#other" class="goto-next scrolly">Next</a>
@@ -236,7 +236,7 @@
 					<p class="subtitle">An augmented reality location-based game.</p>
 				</header>
 				<ul class="actions">
-					<li><a href="planet-free.html" class="button">See more</a></li>
+					<li><a href="planet-free.html" target="_blank" class="button">See more</a></li>
 				</ul>
 			</div>
 			<a href="#other" class="goto-next scrolly">Next</a>
@@ -279,7 +279,7 @@
 					</article>
 					-->
 					<article>
-						<a href="bomb-it.html" class="image2"><img src="images/projects/bombit/header.png" alt="" /></a>
+						<a href="bomb-it.html" target="_blank" class="image2"><img src="images/projects/bombit/header.png" alt="" /></a>
 						<div class="caption">
 							<h3>Bomb It</h3>
 							<p class="subtitle"> Mobile Hyper-Casual</p>
@@ -289,7 +289,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="crypto-bird.html" class="image2"><img src="images/projects/cryptobird/banner.png" alt="" /></a>
+						<a href="crypto-bird.html" target="_blank" class="image2"><img src="images/projects/cryptobird/banner.png" alt="" /></a>
 						<div class="caption">
 							<h3>Crypto Bird</h3>
 							<p class="subtitle"> NFT Endless Runner</p>
@@ -299,7 +299,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="illuminants.html" class="image2"><img src="images/projects/illuminants/spotlight2.png"
+						<a href="illuminants.html" target="_blank" class="image2"><img src="images/projects/illuminants/spotlight2.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
@@ -308,7 +308,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="face-masher.html" class="image2"><img src="images/projects/facemasher/spotlight.png"
+						<a href="face-masher.html" target="_blank" class="image2"><img src="images/projects/facemasher/spotlight.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Face Masher</h3>
@@ -318,7 +318,7 @@
 					</article>
 					
 					<article>
-						<a href="happy-new-rocket.html" class="image2"><img
+						<a href="happy-new-rocket.html" target="_blank" class="image2"><img
 								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
 						<div class="caption">
 							<h3>Happy New Rocket</h3>
@@ -327,7 +327,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
+						<a href="holy-hell.html" target="_blank" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Holy Hell</h3>
@@ -336,7 +336,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="bernardino.html" class="image2"><img src="images/projects/bernardino/banner_square.png"
+						<a href="bernardino.html" target="_blank" class="image2"><img src="images/projects/bernardino/banner_square.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
@@ -346,7 +346,7 @@
 					</article>
 
 					<article>
-						<a href="zoo-quest.html" class="image2"><img src="images/projects/zooquest/spotlight.png"
+						<a href="zoo-quest.html" target="_blank" class="image2"><img src="images/projects/zooquest/spotlight.png"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
@@ -355,7 +355,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="find-your-everything.html" class="image2"><img
+						<a href="find-your-everything.html" target="_blank" class="image2"><img
 								src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
 						<div class="caption">
 							<h3>Find Your Everything</h3>
@@ -364,7 +364,7 @@
 						</div>
 					</article>
 					<article>
-						<a href="atmu.html" class="image2"><img src="images/projects/atmu/banner.png" alt="" /></a>
+						<a href="atmu.html" target="_blank" class="image2"><img src="images/projects/atmu/banner.png" alt="" /></a>
 						<div class="caption">
 							<h3>ATMU</h3>
 							<p class="subtitle">Side-Scroller Adventure</p>
