Update fav games and muay thai description

--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
 						new challenges, learn new skills and grow as a professional,
 						ultimately striving to become a future master of the industry.
 						<br><br>
-						Aside from the game dev world, I am also a neo-professional Kickboxing and Muay Thai
-						federate athlete with a Kickboxing National Champion title.
+						Aside from the game dev world, I am also a professional Kickboxing and Muay Thai
+						athlete with amateur National, European and World Champion medals.
 					</p>
 					<p class="small">
-						<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
-						Mirror's Edge | Subnautica |
-						Outlast | Amnesia: The Dark Descent
+						<b>Fav games:</b> Hollow Knight | Terraria | Hades | Far Cry 3 | Assassin's Creed II |
+						Mirror's Edge | Subnautica | Outlast | Amnesia: The Dark Descent
 						<br>Also a casual fan of competitive games including Call of Duty, Counter Strike, Rocket League, Apex
 						Legends, and League of Legends.
 						<!--<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
