--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 							<p>I am deeply passionate about shaping immersive game experiences that resonate with players. 
 								Throughout my career, I have helped shape the direction of numerous projects 
 								by actively contributing to the game design process.
+								<!-- participating in -->
 							</p>
 							<!-- <p>I am deeply passionate about crafting immersive game experiences that resonate with players, 
 								a passion that is evident in my experience in game design. Throughout my career, I have played a 
