Tweak plastic heroes page

--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -138,27 +138,38 @@
 							<ul class="roles">
 								<li>Pre-production R&D
 									<p> This was our first ever tackle at a multiplayer FPS so there was a lot of research 
-										involved before ever opening Unity and starting developing game systems.
+										involved before ever opening Unity and starting to develop game systems.
 									</p>
 								</li>
 								<li>Fast Prototyping
 									<p> I was responsible for the implementation of core game systems that were mandatory in the 
-										prototype phase and due in a relatively short period.</p>
+										prototype stage and due in a relatively short period.</p>
 								</li>
 								<li>Gameplay Programming
-									<p> I implemented gameplay systems, mechanics and specific tools that helped
-										the development of the project.</p>
+									<p> I implemented gameplay mechanics and systems, included but not limited to the following list:
+										<br>&nbsp&nbsp&nbsp&nbsp- Combat System (shooting, weapons, melee, etc)
+										<br>&nbsp&nbsp&nbsp&nbsp- Part of the Movement System
+										<br>&nbsp&nbsp&nbsp&nbsp- Powers System
+										<br>&nbsp&nbsp&nbsp&nbsp- Progression System
+										<br>&nbsp&nbsp&nbsp&nbsp- Status System
+										<!-- <br>I also implemented tools that helped the development of the project. -->
+									</p>
+								</li>
+								<li>General Programming
+									<p> I am also a generalist programmer that works on UI systems, tools and any other 
+										project necessity.
+									</p>
 								</li>
 								<li>Game Design
 									<p> I take part in the game design process, brainstorming and balancing of gameplay systems.</p>
 								</li>
 								<li>Unity Animations
-									<p> I am responsible for most character animations, whether for movement, combat or any other, 
+									<p> I am responsible for most player animations, whether for movement, combat or any other, 
 										made directly inside the Unity Engine.</p> <!--I love Joana-->
 								</li>
 								<li>Visual Tweaking and Juice
-									<p> I am responsible for visual tweaking - light baking, post processing and shaders - as well
-										 as juice - visual effects, freeze frames, camera shakes, etc.
+									<p> I am responsible for visual tweaking (light baking, post processing and shaders) 
+										as well as juice (visual effects, freeze frames, camera shakes, etc).
 									</p>
 								</li>
 							</ul>
