Experiment with lazy loading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!-- Banner -->
 		<section id="banner">
 			<div class="content">
-				<span class="image overlayed"><img src="images/me/D_02_trimmed_bw.jpg" alt="" /></span>
+				<span class="image overlayed"><img src="images/me/D_02_trimmed_bw.jpg" alt="" loading="lazy" /></span>
 				<header class="main">
 					<h2>Diogo Martins</h2>
 					<p>Unity Developer<br>Gameplay Programmer</p>
@@ -59,7 +59,7 @@
 		</section>
 		<!-- 1 - About Me -->
 		<section id="about-me" class="spotlight cover style1 bottom">
-			<span class="image overlayed main"><img src="images/me/d_02_streched.JPG" alt="" /></span>
+			<span class="image overlayed main"><img src="images/me/d_02_streched.JPG" alt=""/></span>
 			<div class="content">
 				<div class="container">
 					<div class="row">
@@ -279,7 +279,7 @@
 					</article>
 					-->
 					<article>
-						<a href="bomb-it.html" target="_blank" class="image2"><img src="images/projects/bombit/header.png" alt="" /></a>
+						<a href="bomb-it.html" target="_blank" class="image2"><img src="images/projects/bombit/header.png" alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Bomb It</h3>
 							<p class="subtitle"> Mobile Hyper-Casual</p>
@@ -289,7 +289,8 @@
 						</div>
 					</article>
 					<article>
-						<a href="crypto-bird.html" target="_blank" class="image2"><img src="images/projects/cryptobird/banner.png" alt="" /></a>
+						<a href="crypto-bird.html" target="_blank" class="image2"><img src="images/projects/cryptobird/banner.png" 
+							alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Crypto Bird</h3>
 							<p class="subtitle"> NFT Endless Runner</p>
@@ -299,8 +300,8 @@
 						</div>
 					</article>
 					<article>
-						<a href="illuminants.html" target="_blank" class="image2"><img src="images/projects/illuminants/spotlight2.png"
-								alt="" /></a>
+						<a href="illuminants.html" target="_blank" class="image2"><img src="images/projects/illuminants/spotlight2.png" 
+							alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
 							<p class="subtitle">Top-Down Puzzle Game</p>
@@ -309,7 +310,7 @@
 					</article>
 					<article>
 						<a href="face-masher.html" target="_blank" class="image2"><img src="images/projects/facemasher/spotlight.png"
-								alt="" /></a>
+								alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Face Masher</h3>
 							<p class="subtitle"> Mobile Hyper-Casual</p>
@@ -328,7 +329,7 @@
 					</article>
 					<article>
 						<a href="holy-hell.html" target="_blank" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
-								alt="" /></a>
+								alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Holy Hell</h3>
 							<p class="subtitle">Top-Down Action-Adventure</p>
@@ -337,7 +338,7 @@
 					</article>
 					<article>
 						<a href="bernardino.html" target="_blank" class="image2"><img src="images/projects/bernardino/banner_square.png"
-								alt="" /></a>
+								alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
 							<p class="subtitle">Physics-Based Adventure</p>
@@ -347,7 +348,7 @@
 
 					<article>
 						<a href="zoo-quest.html" target="_blank" class="image2"><img src="images/projects/zooquest/spotlight.png"
-								alt="" /></a>
+								alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
 							<p class="subtitle">Riddle/Puzzle Walking Sim</p>
@@ -356,7 +357,7 @@
 					</article>
 					<article>
 						<a href="find-your-everything.html" target="_blank" class="image2"><img
-								src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
+								src="images/projects/findyoureverything/spotlight.png" alt="" loading="lazy"/></a>
 						<div class="caption">
 							<h3>Find Your Everything</h3>
 							<p class="subtitle">Experimental Sim</p>
@@ -364,7 +365,8 @@
 						</div>
 					</article>
 					<article>
-						<a href="atmu.html" target="_blank" class="image2"><img src="images/projects/atmu/banner.png" alt="" /></a>
+						<a href="atmu.html" target="_blank" class="image2"><img src="images/projects/atmu/banner.png" alt="" 
+							loading="lazy"/></a>
 						<div class="caption">
 							<h3>ATMU</h3>
 							<p class="subtitle">Side-Scroller Adventure</p>
@@ -412,32 +414,32 @@
 				</header>
 				<ul class="accolades-list">
 					<li>
-						<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone">
+						<img src="images/accolades/loadingzone.png" class="alt" alt="Loading Zone" loading="lazy">
 						<b>Loading Zone Spotlight Award 2019</b>
 						<span>2nd place award with several games</span>
 					</li>
 					<li>
-						<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019">
+						<img src="images/accolades/indieX2019.png" class="alt" alt="Indie X 2019" loading="lazy">
 						<b>Indie X 2019 Finalist</b>
 						<span>Finalist at Indie X with Heróis do Mar</span>
 					</li>
 					<li>
-						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona">
+						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona" loading="lazy">
 						<b>Best Concept Award</b>
 						<span>Lusófona's Best Concept Award with Heróis do Mar</span>
 					</li>
 					<li>
-						<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018">
+						<img src="images/accolades/indieX2018.png" class="alt" alt="Indie X 2018" loading="lazy">
 						<b>Indie X 2018 Finalist</b>
 						<span>Finalist at Indie X with Illuminants</span>
 					</li>
 					<li>
-						<img src="images/accolades/fnac.png" class="alt" alt="FNAC">
+						<img src="images/accolades/fnac.png" class="alt" alt="FNAC" loading="lazy">
 						<b>Best Game Award</b>
 						<span>FNAC's Best Game Award with Illuminants</span>
 					</li>
 					<li>
-						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona">
+						<img src="images/accolades/lusofona.png" class="alt" alt="Lusófona" loading="lazy">
 						<b>Honorable Mention</b>
 						<span>Lusófona's Honorable Mention with ATMU</span>
 					</li>
@@ -582,6 +584,14 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/12.0.0/lazyload.min.js"></script>
+<script>
+	document.addEventListener("DOMContentLoaded", function() {
+	  var lazyLoadInstance = new LazyLoad({
+		elements_selector: ".lazyload" // CSS class selector for lazy-loadable elements
+	  });
+	});
+  </script>
 
 </body>
 
