Add lazyload to videos

--- a/planet-free.html
+++ b/planet-free.html
@@ -105,7 +105,8 @@
 										</iframe>
 									</div>
 									<div class="video embed fit">
-										<video src="images/projects/planetfree/skoda-ride.mp4" loop controls></video>
+										<!-- <video src="images/projects/planetfree/skoda-ride.mp4" loop controls></video> -->
+										<video class="lazyload" data-src="images/projects/planetfree/skoda-ride.mp4" loop controls></video>
 									</div>
 								</section>
 								<hr />
